# axto

./: CHANGELOG.md  README.md  pyproject.toml  todo.md
docs/: Core.md  README.md  Scenes.md  Themes.md  Widgets.md
src/axto/: __init__.py  core.py  default_scenes.py  keys.py  parser.py  scene.py  scene_manager.py  styles.py  terminal.py
src/axto/widgets/: __init__.py  base.py  box.py  button.py  check_box.py  container.py  input.py  label.py  pop_up.py  progress_bar.py  scroll_list.py  select.py  status_bar.py  tab.py
tests/: hello_world.py  logo.py  scenes.py  simplest.py  test.py
workflows/: publish.yml
